--- a/app/views/icm/incident_requests/get_data.html.erb
+++ b/app/views/icm/incident_requests/get_data.html.erb
@@ -9,4 +9,7 @@
   <% builder.column(:organization_id_label,{:title=>t(:label_icm_incident_request_organization),:searchable=>true})%>
   <% builder.column(:last_request_date,{:title=>t(:label_icm_incident_request_last_date), :width => "110px"})%>
   <% builder.column(:external_system_id_label,{:title=>t(:label_irm_external_system),:width => "180px"})%>
+  <% builder.row do |data|%>
+        style="background-color:<%=data[:display_color]%>;color:<%=get_contrast_yiq(data[:display_color])%>;"
+  <% end %>
 <% end %>
