--- a/app/views/skm/entry_statuses/get_data.html.erb
+++ b/app/views/skm/entry_statuses/get_data.html.erb
@@ -12,4 +12,7 @@
   <% builder.column(:status_code,{:title=>t(:active),:width => "40px"}) do |data|%>
     <%= check_img(data[:status_code]) %>
   <% end %>
+  <% builder.row do |data|%>
+        style="background-color:<%=data[:display_color]%>;color:<%=get_contrast_yiq(data[:display_color])%>;"
+  <% end %>
 <% end %>
