--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1106,6 +1106,10 @@ div.min-block-body {
     text-align: left;
 }
 
+.datatable table td a {
+    text-decoration: underline;
+    color: inherit;
+}
 .datatable table th.sortable {
     cursor: pointer;
 }
