--- a/modules/com/app/views/com/config_items/_edit_form.html.erb
+++ b/modules/com/app/views/com/config_items/_edit_form.html.erb
@@ -17,6 +17,14 @@
             <td class="data-col"></td>
           </tr>
           <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item_config_class)%></label></td>
+            <td class="data-col"><%= f.select :config_class_id, nullable_options_for_select(available_config_class,@config_item.config_class_id),
+                                             {}, {:require=>true,:id=>"config_class_id"} %></td>
+
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
             <td class="label-col"><label><%=(t :label_com_config_item_managed_group)%></label></td>
             <td class="data-col"><%= f.select :managed_group_id, nullable_options_for_select(available_support_group, @config_item.managed_group_id ),
                                              {},{:id=>"config_item_managed_group_id"} %></td>
