--- a/app/views/icm/incident_statuses/get_data.html.erb
+++ b/app/views/icm/incident_statuses/get_data.html.erb
@@ -17,4 +17,7 @@
     <%= check_img(data[:ermanent_close_flag]) %>
   <% end %>
   <% builder.column(:status_meaning,{:title=>t(:status),:width=>"70px"})%>
+  <% builder.row do |data|%>
+        style="background-color:<%=data[:display_color]%>;color:<%=get_contrast_yiq(data[:display_color])%>;"
+  <% end %>
 <% end %>
