添加投票控件

--- a/modules/bootstrap/app/assets/stylesheets/browser/ie6.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/browser/ie6.css.less
@@ -204,4 +204,10 @@
         text-align: left;
     }
 
+    //===digg button
+    .digg-btn {
+        display: inline;
+        zoom:1;
+    }
+
 }
