--- a/modules/bootstrap/app/assets/stylesheets/browser/ie7.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/browser/ie7.css.less
@@ -3,4 +3,10 @@
         display: inline;
         margin-bottom: 0;
     }
+    //===digg button
+    .digg-btn {
+        display: inline;
+        zoom:1;
+        margin-left: 5px;
+    }
 }
