--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -2003,6 +2003,47 @@ fieldset legend {
     float:right;
 }
 
+//======digg button======
+.digg-zone{
+    text-align: center;
+}
+.digg-btn {
+    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+    position: relative;
+    text-align: center;
+    width: 60px;
+    display: inline-block;
+}
+.digg-btn .digg-count {
+    background-color: #FFFFFF;
+    border-color: #E4E682 #E4E682 #E4E682;
+    border-style: none solid solid;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-width: 0px 1px 1px;
+    color: #444444;
+    display: block;
+    height: 22px;
+    line-height: 22px;
+    overflow: hidden;
+}
+.digg-btn .digg-action {
+    background-color: #FDFFB0;
+    border-color: #E4E682 #E4E682 #E4E682 #E4E682;
+    border-style: solid solid  solid solid;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-width: 1px 1px;
+    color: #444444;
+    display: block;
+    height: 22px;
+    line-height: 22px;
+    overflow: hidden;
+}
+.digg-text{
+    font-weight: bold;
+}
+
 //=====auto saving =====================
 @import "framework/auto-saving";
 
