--- a/app/views/skm/entry_templates/edit_detail.html.erb
+++ b/app/views/skm/entry_templates/edit_detail.html.erb
@@ -1,71 +1,61 @@
 <%= app_title %>
-<%= form_for(@detail,:url=>{:action=>"update_detail", :detail_id => @detail.id},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+<%= form_for(@detail,:url=>{:action=>"update_detail", :detail_id => @detail.id},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_skm_entry_template_detail_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <% if @return_url.blank?%>
-                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-            <% else %>
-                <div class="button"><%= link_to t(:cancel), @return_url%></div>
-            <% end %>
-          </td>
-        </tr>
+          <tr>
+            <td class="labelCol"><label><%=(t :label_skm_entry_template_element_name)%></label></td>
+            <td class="data2Col"><%= @element.name%></td>
+          </tr>
+          <tr>
+            <td class="labelCol"><label><%=(t :label_skm_entry_template_element_rows)%></label></td>
+            <td class="data2Col"><%=f.text_field :default_rows,:irm_number_only => true, :required=>true%></td>
+          </tr>
+          <tr>
+            <td class="labelCol"><label><%=t(:label_skm_entry_template_element_required)%></label></td>
+            <td class="data2Col"><%= f.check_box :required_flag%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @detail%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back(t(:back),{:action=>"index"})%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_skm_entry_template_detail_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @detail %>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_template_element_name)%></label></td>
-              <td class="data2Col"><%= @element.name%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_template_element_rows)%></label></td>
-              <td class="data2Col"><%=f.text_field :default_rows,:irm_number_only => true, :required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_skm_entry_template_element_required)%></label></td>
-              <td class="data2Col"><%= f.check_box :required_flag%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <% if @return_url.blank?%>
-                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-            <% else %>
-                <div class="button"><%= link_to t(:cancel), @return_url%></div>
-            <% end %>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
