--- a/app/views/chm/change_requests/_show.html.erb
+++ b/app/views/chm/change_requests/_show.html.erb
@@ -1,7 +1,8 @@
 <%= render "list_journals" %>
+<%- unless params[:format].eql?('pdf') -%>
+  <iframe name="hiddenFrame" style="display: none;"></iframe>
+  <div id="journalForm">
+    <%= render "journal_form" %>
+  </div>
+<%- end -%>
 
-
-<iframe name="hiddenFrame" style="display: none;"></iframe>
-<div id="journalForm">
-  <%= render "journal_form" %>
-</div>
