--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -6,7 +6,7 @@
     <div class="sidebar-block-body">
       <div class="form-inline">
         <table width="100%">
-          <% if allow_to_function?(:edit_relation) && !params[:format].eql?('pdf') %>
+          <% if allow_to_function?(:edit_relation) %>
           <tbody id="new_relation_form">
             <tr>
               <td>
