--- a/app/views/skm/entry_headers/show.pdf.erb
+++ b/app/views/skm/entry_headers/show.pdf.erb
@@ -1,83 +1,48 @@
-<%= wicked_pdf_stylesheet_link_tag "application","pdf" %>
-<%= wicked_pdf_javascript_include_tag "application","pdf" %>
-<div class="pdf-container">
-  <%- with_format('html') do %>
-    <!--页面结构-->
-    <div class="page-block">
-      <table class="page-block-header"><tr>
-        <td class="page-block-title">
-          <h2 class="block-title">[<%= @entry_header.doc_number%>]&nbsp;&nbsp;&nbsp;<%= @entry_header.entry_title %></h2>
-        </td>
-        <td class="page-block-button">
-          <% if @entry_header[:is_favorite] == Irm::Constant::SYS_NO %>
-            <%= link_to t(:save_page), {:controller => "skm/entry_headers", :action => "add_favorites", :id => @entry_header.id, :person_id => Irm::Person.current.id},:class=>"btn btn-primary"%>
-          <% end %>
-          <% if @entry_header.history_flag == Irm::Constant::SYS_NO %>
-            <%= link_to t(:edit), {:action => "edit", :id => @entry_header},:class=>"btn"%>
-          <% end %>
-          <%= link_to t(:back), {:action => "index"},:class=>"btn cancel"%>
-          <%= link_to t(:export_pdf), {:controller=>"skm/entry_headers",:action=>"show",:format => "pdf"}, {:class => "btn btn-info",:target => "_blank"} %>
-        </td>
-      </tr></table>
-      <div class="page-block-body">
-        <div class="sub-page-block">
-          <div class="sub-page-block-header">
-            <h3 class="sub-page-block-title"><%= t(:label_skm_navigator) %></h3>
-          </div>
-          <div class="sub-page-block-body">
-             <table class="detail-list">
-               <tbody>
-                   <% @entry_header.entry_details.each do |e| %>
-                       <tr>
-                         <td class="data-col"><%= e.element_name %></td>
-                       </tr>
-                   <% end %>
-               </tbody>
-             </table>
-          </div>
-        </div>
-        <div class="sub-page-block">
-          <% @entry_header.entry_details.each do |e| %>
-              <div class="sub-page-block-header">
-                <h3 class="sub-page-block-title"><%= raw(e.element_name) %></h3>
-                <div class="sub-page-block-help" style="float: right;">
-                  <a href="javascript:void(0);" onclick="scrollTo(0, 0);"><%= t(:go_to_top) %></a>
-                </div>
-              </div>
-              <div class="sub-page-block-body">
-                 <a id="<%= e.id %>" name="<%= e.id %>">&nbsp;</a>
-                 <table class="show-table">
-                   <tbody>
-                       <tr>
-                         <td class="data-col" style="padding: 2px 10px !important;"><pre><%= raw(e.entry_content) %></pre></td>
-                       </tr>
-                   </tbody>
-                 </table>
-              </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <!-- 版本列表 -->
-    <div class="page-block">
-      <table class="page-block-header">
+<%= wicked_pdf_stylesheet_link_tag "pdf" %>
+
+<div class="pdf-container" style="margin-top: 20px;">
+  <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#333333">
+   <tr>
+    <td>
+      <table width="100%" height="25" border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
         <tr>
-          <td class="page-block-title">
-            <h2 class="block-title"><%= t(:label_skm_entry_header_history_list) %></h2>
+          <td width="59%">
+            <strong>[<%= @entry_header.doc_number%>]&nbsp;&nbsp;&nbsp;<%= @entry_header.entry_title %>&nbsp; &nbsp;&nbsp;&nbsp;</strong>
           </td>
+          <td width="41%" align="right"><strong><%= t(:label_skm_entry_header_published_date) %>:</strong><%= format_date(@entry_header.created_at) %></td>
         </tr>
       </table>
-      <div class="page-block-body">
-        <%=datatable_view({:count=>@entry_history.count,:datas=>@entry_history}) do |builder|%>
-          <% builder.column(:id,{:title=>t(:operation)})%>
-          <% builder.column(:published_date_f,{:title=>t(:label_skm_entry_header_published_date),:width=>"150px"})%>
-          <% builder.column(:version_number,{:title=>t(:label_skm_entry_header_version)}) %>
-          <% builder.column(:full_title,{:title=>t(:label_skm_entry_header_title)}) do |data|%>
-            <%= link_to(data[:full_title], {:controller => "skm/entry_headers", :action => "show", :id => data[:id]})%>
-          <% end %>
-          <% builder.column(:doc_number,{:title=>t(:label_skm_entry_header_doc_number),:width => "120px"}) %>
-        <% end %>
-      </div>
-    </div>
-  <%- end %>
+      <table class="show-table" width="100%" border="0" align="center" cellpadding="3" cellspacing="2">
+        <!-- 知识库内容 -->
+        <%- @entry_header.entry_details.each do |e| -%>
+        <tr>
+          <td colspan="4"><h3><%= raw(e.element_name) %></h3></td>
+        </tr>
+        <tr>
+          <td colspan="4"><pre><%= raw(e.entry_content) %></pre></td>
+        </tr>
+        <%- end -%>
+        <!--- 版本列表 -->
+        <tr>
+          <td colspan="4"><h3><%= t(:label_skm_entry_header_history_list) %></h3></td>
+        </tr>
+        <tr class="header">
+          <td align="center" width="30%" ><%= t(:label_skm_entry_header_published_date) %></td>
+          <td align="center" width="15%"><%= t(:label_skm_entry_header_version) %></td>
+          <td align="center" width="40%"><%= t(:label_skm_entry_header_title) %></td>
+          <td align="center" width="15%"><%= t(:label_skm_entry_header_doc_number) %></td>
+        </tr>
+        <%- @entry_history.each do |data| -%>
+        <tr>
+           <td align="center"><%= data[:published_date_f] %></td>
+           <td align="center"><%= data[:version_number] %></td>
+           <td align="center"><%= data[:full_title] %></td>
+           <td align="center"><%= data[:doc_number] %></td>
+        </tr>
+        <%- end -%>
+      </table>
+    </td>
+   </tr>
+  </table>
 </div>
+
