添加导出pdf数据配置layout参数

--- a/app/views/skm/entry_headers/show.pdf.erb
+++ b/app/views/skm/entry_headers/show.pdf.erb
@@ -1,6 +1,4 @@
-<%= wicked_pdf_stylesheet_link_tag "pdf" %>
-
-<div class="pdf-container" style="margin-top: 20px;">
+<div class="pdf-container">
   <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#333333">
    <tr>
     <td>
