完善知识文章关联

--- a/app/views/skm/entry_headers/new_step_2.html.erb
+++ b/app/views/skm/entry_headers/new_step_2.html.erb
@@ -67,7 +67,7 @@
                     <tr>
                       <%= fields_for("skm_entry_details[]", e) do |ef|%>
                       <td><% if e.required_flag == "Y"%>
-                          <%= ef.text_area :entry_content, {:jrequired => true, :rows => e.default_rows, :style => "width:100%;", :value => (session[:skm_entry_details][e.id.to_s.to_sym][:entry_content] if session[:skm_entry_details])} %>
+                          <%= ef.text_area :entry_content, {:required => true, :rows => e.default_rows, :style => "width:100%;", :value => (session[:skm_entry_details][e.id.to_s.to_sym][:entry_content] if session[:skm_entry_details])} %>
                               <% if @error_details.include?(e.id) %>
                               <div class="errorMsg"><strong><%= t(:error) %>:</strong>["<%= t(:error_skm_entry_detail_can_not_blank)%>"]</div>
                               <% end if @error_details %>
@@ -98,7 +98,7 @@
                     <tr>
                       <%= fields_for("skm_entry_details[]", e) do |ef|%>
                       <td class="data-col" style="padding: 2px 20px 2px 10px !important;"><% if e.required_flag == "Y"%>
-                          <%= ef.text_area :entry_content, {:rows => e.default_rows, :style => "width:100%;", :jrequired => true} %>
+                          <%= ef.text_area :entry_content, {:rows => e.default_rows, :style => "width:100%;", :required => true} %>
                           <% else %>
                           <%= ef.text_area :entry_content, {:rows => e.default_rows, :style => "width:100%;"} %>
                           <% end %>
