--- a/app/views/skm/entry_headers/video_show.html.erb
+++ b/app/views/skm/entry_headers/video_show.html.erb
@@ -40,4 +40,9 @@
       </div>
     </div>
   </div>
+
+  <!-- 关联的知识库 -->
+  <div id="entryHeaderRelation">
+    <%= render :partial=> "skm/entry_headers/entry_header_relations",:locals=>{:datas=>@entry_relation,:entry_header_id => @entry_header.id }%>
+  </div>
 </div>
