--- a/app/views/skm/entry_headers/new_relation.html.erb
+++ b/app/views/skm/entry_headers/new_relation.html.erb
@@ -47,7 +47,32 @@
         <div class="sub-page-block-body">
           <%= content_for :form_block_common   %>
         </div>
-
+        <%- if session[:skm_entry_details] -%>
+          <%- @elements.each do |e| -%>
+            <div class="sub-page-block-header">
+              <h3 class="sub-page-block-title"><%= e.element_name %><%= e.required_flag == "Y" ? "(必填)" : "" %></h3>
+            </div>
+            <div class="sub-page-block-body">
+              <table class="show-table">
+                <tbody>
+                    <tr>
+                      <%= fields_for("skm_entry_details[]", e) do |ef|%>
+                      <td><% if e.required_flag == "Y"%>
+                          <%= ef.text_area :entry_content, {:required => true, :rows => e.default_rows, :style => "width:100%;", :value => (session[:skm_entry_details][e.id.to_s.to_sym][:entry_content] if session[:skm_entry_details])} %>
+                              <% if @error_details.include?(e.id) %>
+                              <div class="errorMsg"><strong><%= t(:error) %>:</strong>["<%= t(:error_skm_entry_detail_can_not_blank)%>"]</div>
+                              <% end if @error_details %>
+                          <% else %>
+                            <%= ef.text_area :entry_content, {:rows => e.default_rows, :style => "width:100%;", :value => (session[:skm_entry_details][e.id.to_s.to_sym][:entry_content] if session[:skm_entry_details])} %>
+                          <% end %>
+                      </td>
+                      <% end %>
+                    </tr>
+                </tbody>
+              </table>
+            </div>
+          <%- end -%>
+        <%- else -%>
         <% @entry_header.entry_details.order("line_num ASC").each do |ed| %>
           <div class="sub-page-block-header">
             <h3 class="sub-page-block-title"><%= ed.element_name %>&nbsp;<%= ed.required_flag == "Y" ? "(必填)" : "" %></h3>
@@ -55,20 +80,21 @@
           <div class="sub-page-block-body">
             <table class="show-table">
               <tbody>
-                  <%= fields_for("skm_entry_details[]", ed) do |ef| %>
+                <%= fields_for("skm_entry_details[]", ed) do |ef| %>
                   <tr>
                     <td class="data-col" style="padding: 2px 20px 2px 10px !important;"><% if ed.required_flag == "Y"%>
-                        <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :required => true, :value => ed.entry_content} %>
-                        <% else %>
-                        <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :value => ed.entry_content} %>
-                        <% end %>
+                      <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :required => true, :value => ed.entry_content} %>
+                      <% else %>
+                      <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :value => ed.entry_content} %>
+                      <% end %>
                     </td>
                   </tr>
-                  <% end %>
+                <% end %>
               </tbody>
             </table>
           </div>
         <% end %>
+        <%- end -%>
         <!-- 加载上传附件模板 -->
         <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => true, :exist_attachments => list_exist_skm_entry_attachments(@entry_header.attachments, @entry_header.id), :attachments => @entry_header.attachments,:delete_url => {:controller => "skm/entry_headers", :action => "remove_exits_attachment"} } %>
       </div>
