完善中英文语言支持，修改不影响页面布局的翻译

--- a/app/views/skm/entry_headers/new_step_video_upload.html.erb
+++ b/app/views/skm/entry_headers/new_step_video_upload.html.erb
@@ -53,6 +53,9 @@
         </tr>
     </table>
     <%= error_for @entry_header %>
+    <% if flash[:notice] -%>
+      <div id="notice"><%= flash[:notice] %></div>
+    <% end -%>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 个人信息 -->
