--- a/app/views/irm/bulletins/_new_form.html.erb
+++ b/app/views/irm/bulletins/_new_form.html.erb
@@ -7,19 +7,18 @@
       <tbody>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_bulletin_title)%></label></td>
-            <td class="data-2col"><%=f.text_field :title, :required=>true,:style => "width:80%;min-with:200px;"%></td>
+            <td class="data-3col"><%=f.text_field :title, :required=>true,:style => "width:300px;min-with:200px;" %></td>
           </tr>
-
           <tr>
             <td class="label-col"><label><%=(t :label_irm_bulletin_content)%></label></td>
-            <td class="data-2col" colspan="4" width="100%">
+            <td class="data-3col">
               <%= f.text_area :content ,:id=>"msgEditor",:rows=>8, :required => true%>
               <%= xheditor("msgEditor",true) %>
             </td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_bulletin_sticky_flag)%></label></td>
-            <td class="data-2col"><%=f.check_box :sticky_flag%></td>
+            <td class="data-3col"><%=f.check_box :sticky_flag%></td>
           </tr>
       </tbody>
     </table>
@@ -29,12 +28,12 @@
       <tbody>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_bu_column_choice)%></label></td>
-            <td class="data-col" width="1%">
+            <td class="data-3col" colspan="3">
               <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "irm/bu_columns", :action=>"get_columns_data", :format=>:json),
-                                                                   :tree_id => "tree-div",
-                                                                   :li_attrs => "id",
-                                                                   :auto_css => true,
-                                                                   :checkbox => true} %>
+                                                                                               :tree_id => "tree-div",
+                                                                                               :li_attrs => "id",
+                                                                                               :auto_css => true,
+                                                                                               :checkbox => true} %>
             </td>
           </tr>
       </tbody>
