修正tab标签文字太长影响页面效果Bug

--- a/modules/bootstrap/app/assets/stylesheets/framework/tabs.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/tabs.less
@@ -20,7 +20,7 @@
   border-right:1px solid #e7e7e7;
   float:left;
   height:29px;
-  width:80px;}
+  min-width:80px;}
 .mx-tabs ul li a{
   color:#636363;
   cursor:pointer;
