--- a/app/views/icm/incident_requests/_search.html.erb
+++ b/app/views/icm/incident_requests/_search.html.erb
@@ -1,67 +1,50 @@
-<div class="sub-block">
-    <h3 class="lbHeader"></h3>
-    <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h3 class="lbHeader"><%= t(:label_icm_incident_request_list) %></h3></td>
-          <td id="topButtonRow" class="pbButton">
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_icm_incident_request_list) %></h2>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div class="datatable">
+      <table id='rows'>
+        <thead>
+          <tr>
+            <th style="width:40px">
+              <div><%= t(:label_icm_incident_request_number) %></div>
+            </th>
+            <th style="width:180px;">
+              <div><%= t(:label_icm_incident_request_title) %></div>
+            </th>
+            <th style="width:180px;">
+              <div ><%= t(:label_icm_incident_request_organization) %></div>
+            </th>
+            <th style="width:180px;">
+              <div ><%= t(:label_icm_incident_request_requested_by) %></div>
+            </th>
+          </tr>
+        </thead>
+        <tbody >
+        <% results.each do |r| %>
+        <tr id="<%=r.id%>" >
+          <td>
+            <div><%= r[:request_number] %></div>
           </td>
-          <td class="pbHelp">
+          <td>
+            <div><%=link_to r[:title], {:controller => "icm/incident_journals", :action => "new", :request_id =>r[:id]}%></div>
+          </td>
+          <td >
+            <div><%=r[:organization_name]%></div>
+          </td>
+          <td >
+            <div><%=r[:requested_name]%></div>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <div class="lbBody">
-        <div>
-          <div class="irm-datatable">
-                <table id='rows'>
-                  <thead>
-                    <tr>
-                      <th style="width:40px">
-                        <div>#</div>
-                      </th>
-                      <th  style="width:180px;">
-                        <div><%= t(:label_icm_incident_request_title) %>
-                        </div>
-                      </th>
-                      <th  style="width:180px;">
-                        <div ><%= t(:label_icm_incident_request_organization) %>
-                        </div>
-                      </th>
-                      <th  style="width:180px;">
-                        <div ><%= t(:label_icm_incident_request_requested_by) %>
-                        </div>
-                      </th>
-                    </tr>
-                  </thead>
-                  <tbody >
-                  <% results.each do |r| %>
-                  <tr id="<%=r.id%>" >
-                    <td >
-                      <div >
-                        <%= r[:request_number] %>
-                       </div>
-                    </td>
-                    <td >
-                      <div >
-                          <%=link_to r[:title], {:controller => "icm/incident_journals", :action => "new", :request_id =>r[:id]}%>
-                       </div>
-                    </td>
-                    <td >
-                      <div>
-                        <%=r[:organization_name]%>
-                      </div>
-                    </td>
-                    <td >
-                      <div >
-                        <%=r[:requested_name]%>
-                      </div>
-                    </td>
-                  </tr>
-                  <% end -%>
-                  </tbody>
-                </table>
-          </div>
-        </div>
+        <% end -%>
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
