--- a/modules/bootstrap/app/assets/stylesheets/framework/tabs.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/tabs.less
@@ -28,7 +28,7 @@
   font-size:12px;
   height:14px;
   line-height:14px;
-  padding:8px 0;
+  padding:8px 10px;
   text-align:center;}
 .mx-tabs ul li a:hover{
   color:#de4727;
