--- a/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap-override.less
+++ b/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap-override.less
@@ -38,7 +38,7 @@ select, input[type="file"] {
 
 input, textarea, select, .uneditable-input {
     font-size: 11px;
-    padding: 2px 4px;
+    padding: 2px 4px !important;
 
 }
 
