--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -451,7 +451,7 @@
     </td>
     <td class="page-block-button">
       <% if !@incident_request.close? &&!@incident_request.permanent_close?&& allow_to_function?(:reply_incident_request)&&@incident_request.watcher?(Irm::Person.current.id) %>
-          <a href="#reply" class="btn"><%= t(:label_icm_incident_journal_new) %></a>
+          <a href="#new_icm_incident_reply" class="btn"><%= t(:label_icm_incident_journal_new) %></a>
       <% end %>
     </td>
     <td class="page-block-help" style="width: auto;">
