修复Lov时间类型数据没有格式化的bug

--- a/app/views/irm/list_of_values/_lov_result.html.erb
+++ b/app/views/irm/list_of_values/_lov_result.html.erb
@@ -25,7 +25,8 @@
                   </td>
                 <% else %>
                   <td>
-                    <div><%= data[field[:key].to_sym] %></div>
+                    <div>
+                      <%= handler_lov_data(data[field[:key]]) %></div>
                   </td>
                 <% end %>
               <% end %>
