添加wiki模板,并在wiki编辑器中应用模板

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1498,6 +1498,10 @@ table.form-table  td.button-col{
     }
 }
 
+.form-field-full {
+    width: 100%;
+}
+
 .form-field-wrapped .error-message {
     color: #CC0000;
     display: block;
