--- a/modules/skm/app/views/skm/wikis/_edit_form.html.erb
+++ b/modules/skm/app/views/skm/wikis/_edit_form.html.erb
@@ -1,15 +1,49 @@
 <%= app_title %>
 <%= form_for(@wiki, :url => {:action => "update"}, :builder => CustomFormBuilder) do |f| %>
 
-
     <% content_for :form_block_a do %>
-      <%= render :partial=>"editor",:locales=>{:f=>f} %>
-    <% end %>
+            <table class="form-table" style="width: 100%;" cellpadding="0" cellspacing="0" border="0">
+              <tbody>
+              <tr>
+                <td class="label-col"><label for="name"><%= t(:label_skm_wiki_name) %></label></td>
+                <td class="data-3col"><%= f.text_field :name, :required => true, :id => "name",:full=>true,:style=>"width:80%;" %></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="name"><%= t(:label_skm_wiki_tags) %></label></td>
+                <td class="data-3col"><%= f.text_field :tags, :required => true, :id => "tags",:full=>true,:style=>"width:50%;" %></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="name"><%= t(:label_skm_wiki_channel) %></label></td>
+                <td class="data-3col"><%= f.lov_field :channel_id, Skm::Channel, {:required => true}%></td>
+              </tr>
+
+              <tr>
+                <td class="label-col"><label for="content"><%= t(:label_skm_wiki_content) %></label></td>
+                <td class="data-3col">
+                  <%= render :partial=>"skm/wiki_templates/editor",:locals=>{:f=>f} %>
+                </td>
+    
+              </tr>
+              <tr>
+                <td class="label-col"><label for="description"><%= t(:label_skm_wiki_description) %></label></td>
+                <td class="data-col"><%= f.text_field :description, :id => "description",:full=>true,:style=>"width:80%;" %></td>
+                <td class="label-col">&nbsp;</td>
+                <td class="data-col">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="private_flag"><%= t(:label_skm_wiki_private_flag) %></label></td>
+                <td class="data-col"><%= f.check_box :private_flag, :id => "private_flag" %></td>
+                <td class="label-col">&nbsp;</td>
+                <td class="data-col">&nbsp;</td>
+              </tr>
+              </tbody>
+            </table>
+        <% end %>
 
 
     <% content_for :form_buttons do %>
         <%= link_submit t(:save), {:class => "btn btn-primary"} %>
-        <%= link_to t(:label_skm_wiki_preview), {:action => "preview"},{:target=>"_blank",:class=>"submit btn"} %>
+        <%= link_to t(:label_skm_wiki_preview), {:action => "preview"},{ :target=>"_blank",:class=>"submit btn"} %>
         <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
     <% end %>
 
@@ -20,7 +54,7 @@
       <table class="page-block-header">
         <tr>
           <td class="page-block-title">
-            <h2 class="block-title"><%= t(:label_skm_wiki_new) %></h2>
+            <h2 class="block-title"><%= t(:label_irm_wiki_new) %></h2>
           </td>
           <td class="page-block-button">
             <%= content_for :form_buttons %>
@@ -28,7 +62,7 @@
         </tr>
       </table>
       <div class="page-block-body">
-        <%= error_for @rating_config %>
+        <%= error_for @wiki %>
         <div class="sub-page-block">
           <div class="sub-page-block-body">
             <%= content_for :form_block_a %>
